# imageProcessing

./: .gitignore  README.md
01_grayscale/: CMakeLists.txt  README.md  run.bat
01_grayscale/src/: CMakeLists.txt  main.cpp
02_threshold/: README.md  run.bat
02_threshold/src/: CMakeLists.txt  main.cpp
03_histogram/: README.md  run.bat
03_histogram/src/: CMakeLists.txt  Histogram.cpp  Histogram.h  PointOperations.cpp  PointOperations.h  Threshold.cpp  Threshold.h  main.cpp
04_spatial_filter/src/: CMakeLists.txt  Filter.cpp  Filter.h  main.cpp
05_segmentation1_template_matching/src/: CMakeLists.txt  Segmentation.cpp  Segmentation.h  main.cpp
05_segmentation2_hough/src/: Segmentation.cpp  main.cpp
06_morphology/data/: fingerprint.tiff  segments.tiff  text1.tiff  text3.tiff
06_morphology/src/: Morphology.cpp  Morphology.h  imshow_multiple.h
07_dct/src/: Dct.cpp  Dct.h  main.cpp
6_Morphology/06_morphology_solution/data/: dots.tiff  kernel_dot.tiff  text2.tiff
6_Morphology/06_morphology_solution/src/: CMakeLists.txt  Morphology.cpp  main.cpp
7_DCT/07_dct_solution/src/: CMakeLists.txt  Dct.cpp  Dct.h
